--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -58,13 +58,6 @@
     "downloadHint": "Download your project files so you can use them offline and in a different code editor.",
     "downloadButton": "Download project"
   },
-  "footer": {
-    "accessibility": "Accessibility",
-    "charityNameAndNumber": "Raspberry Pi Foundation UK registered charity 1129409",
-    "cookies": "Cookies",
-    "privacy": "Privacy",
-    "safeguarding": "Safeguarding"
-  },
   "projectName": {
     "label": "Project name",
     "newProject": "New Project"
@@ -73,12 +66,10 @@
     "download": "Download",
     "downloadFileNameDefault": "my {{project_type}} project",
     "editorLogoAltText": "Editor logo",
-    "projects": "Your projects",
     "renameProject": "Edit project name",
     "renameSave": "Save project name",
     "save": "Save",
-    "loginToSave": "Log in to save",
-    "settings": "Settings"
+    "loginToSave": "Log in to save"
   },
   "imagePanel": {
     "gallery": "Image Gallery"
@@ -137,7 +128,6 @@
   "notifications": {
     "close": "close",
     "loginPrompt": "To save this project and access it later, don't forget to log in or sign up!",
-    "projectRemixed": "Your remixed project has been saved",
     "projectRenamed": "You have renamed your project.",
     "projectSaved": "Your project has been saved",
     "savePrompt": "Save this project to access it later under \"Your projects\"."
@@ -199,37 +189,13 @@
     },
     "untitled": "Untitled project"
   },
-  "projectHeader": {
-    "subTitle": "Code Editor",
-    "title": "Your projects",
-    "text": "Select a project to continue coding, view, or edit it."
-  },
   "projectList": {
-    "delete": "Delete",
-    "deleteLabel": "Delete project",
-    "empty": "No projects created yet",
-    "label": "Open project menu",
-    "loading": "Loading",
-    "loadingFailed": "Failed to load projects",
-    "newProject": "Create a new project",
-    "pagination": {
-      "first": "First page",
-      "last": "Last page",
-      "next": "Next page",
-      "previous": "Previous page",
-      "more": "Load more projects"
-    },
-    "rename": "Rename",
-    "renameLabel": "Rename project",
     "renameProjectModal": {
       "cancel": "Do not save",
       "heading": "Rename project",
       "inputLabel": "Change the name of your project",
       "save": "Save"
-    },
-    "updated": "Edited",
-    "python_type": "Python",
-    "html_type": "HTML"
+    }
   },
   "projectTypes": {
     "html": "HTML/CSS",
