--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -12,7 +12,7 @@
   "editorPanel": {
     "ariaLabel": "editor text input",
     "characterLimitError": "Error: Character limit reached",
-    "characterLimitExplanation": "Files in the editor are limited to {{maxCharacters}} characters",
+    "characterLimitExplanation_other": "Files in the editor are limited to {{count}} characters",
     "viewOnly": "View only",
     "close": "close"
   },
