--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -78,6 +78,17 @@
     "info": "Information"
   },
   "instructionsPanel": {
+    "demoInstructions": {
+      "title": "How instructions work",
+      "enablingInstructions": "Enabling instructions",
+      "visible": "Any text written here will be visible to students in the sidebar.",
+      "writingInstructions": "Writing instructions",
+      "markdown": "Write your instructions using [Markdown](https://www.markdownguide.org/).",
+      "whatYouCanDo": "What you can do",
+      "lists": "Lists",
+      "bulletPoints": "Bullet points",
+      "numberedSteps": "Numbered steps"
+    },
     "emptyState": {
       "addInstructions": "Add instructions",
       "edits": "Like project code, students will not see any edits you make to the instructions after they have saved their version of the project.",
