fix: update `imagePanel.gallery` string to remove Title Casing for consistency

--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -73,7 +73,7 @@
     "loginToSave": "Log in to save"
   },
   "imagePanel": {
-    "gallery": "Image Gallery"
+    "gallery": "Image gallery"
   },
   "infoPanel": {
     "info": "Information"
