fix: unused translation string and capitalisation fixes (#1238)
closes
https://github.com/RaspberryPiFoundation/digital-editor-issues/issues/808

## Summary

- Updated `imagePanel.gallery` to sentence case
- Updated `imageUploadButton.uploadImage` to sentence case
- Removed unused string (I found while searching)

## Notes

Unused string:

<img width="408" height="162" alt="Screenshot 2025-07-29 at 17 01 34"
src="https://github.com/user-attachments/assets/8adc7a44-535d-467e-bb4a-42386eff900a"
/>

--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -26,7 +26,6 @@
       "unsupportedExtension": "File names must end in {{allowedExtensions}}."
     },
     "files": "Project files",
-    "images": "Image gallery",
     "newFileButton": "Add file",
     "newFileModal": {
       "cancel": "Cancel",
@@ -73,7 +72,7 @@
     "loginToSave": "Log in to save"
   },
   "imagePanel": {
-    "gallery": "Image Gallery"
+    "gallery": "Image gallery"
   },
   "infoPanel": {
     "info": "Information"
@@ -237,7 +236,7 @@
     "failed": "Load failed"
   },
   "imageUploadButton": {
-    "uploadImage": "Upload Image",
+    "uploadImage": "Upload image",
     "uploadAnImage": "Upload an image",
     "info": "Drag and drop images here, or click to select images from file",
     "cancel": "Cancel",
