add translation for step counter

--- a/public/translations/en.json
+++ b/public/translations/en.json
@@ -110,6 +110,7 @@
     "removeInstructions": "Remove instructions",
     "nextStep": "Next step",
     "previousStep": "Previous step",
+    "stepCounter": "{{currentStep}} of {{totalSteps}}",
     "projectSteps": "Project instructions",
     "edit": "Edit",
     "view": "View",
